añadiendo validaciones a todos los formularios (login, register, newProduct, editProduct, profile)

--- a/public/css/styles-profile.css
+++ b/public/css/styles-profile.css
@@ -18,6 +18,7 @@ section {
 /* CONTENEDOR MENSAJE DE ERROR */
 .error {
     margin-left: 0.5rem !important;
+    margin-bottom: 0.3rem;
     font-size: 0.8rem;
     color: #BF2020;
     font-style: italic;
