--- a/src/views/products/newProduct.ejs
+++ b/src/views/products/newProduct.ejs
@@ -17,7 +17,7 @@
 
             <!-------------- FORMULARIO --------------------->
             <div class="contenedor-formulario">
-                <form action="/product/allProducts/newProduct" method="POST" enctype="multipart/form-data">
+                <form action="/product/allProducts/newProduct" method="POST" enctype="multipart/form-data" id="newProductForm">
                     <div class="contenedor-inputs">
                         <div>
                             <label for="name">Nombre del producto:</label>
@@ -25,6 +25,7 @@
                             <% if (locals.errors && errors.name) { %>
                                 <div class="error">* <%= errors.name.msg %></div>
                             <% } %>
+                            <div class="error" id="errorName"></div>
                         </div>
                             
                         <div>
@@ -33,6 +34,7 @@
                             <% if (locals.errors && errors.price) { %>
                                 <div class="error">* <%= errors.price.msg %></div>
                             <% } %>
+                            <div class="error" id="errorPrice"></div>
                         </div>
 
                         <div>
@@ -41,6 +43,7 @@
                             <% if (locals.errors && errors.discount) { %>
                                 <div class="error">* <%= errors.discount.msg %></div>
                             <% } %>
+                            <div class="error" id="errorDiscount"></div>
                         </div>
 
                         <div>
@@ -74,6 +77,7 @@
                             <% if (locals.errors && errors.image) { %>
                                 <div class="error">* <%= errors.image.msg %></div>
                             <% } %>
+                            <div class="error" id="errorImage"></div>
                         </div>
 
                         <div>
@@ -92,6 +96,7 @@
                             <% if (locals.errors && errors.description) { %>
                                 <div class="error">* <%= errors.description.msg %></div>
                             <% } %>
+                            <div class="error" id="errorDescription"></div>
                         </div>
 
                         <div class="boton-guardar">
@@ -107,4 +112,5 @@
     <%- include('../partials/footer.ejs') %>
 
 </body>
+<script src="/scripts/Validations/newProduct.js"></script>
 </html>
