--- a/src/views/user/register.ejs
+++ b/src/views/user/register.ejs
@@ -11,7 +11,7 @@
         <!----------------- FORMULARIO DE REGISTRO ------------------------>
         <section class="fondo-register">
             <article class="contenedor-register">
-                <form action="/user/register" method="post">
+                <form action="/user/register" method="post" id="registerForm">
 
                     <!----------------- TITULO DEL FORMULARIO ------------------------>
                     <label class="titulo-register">Registrarse</label>
@@ -22,24 +22,28 @@
                     <% if (locals.errors && errors.user) { %>
                         <div class="error">* <%= errors.user.msg %></div>
                     <% } %>
+                    <div class="error" id="errorUser"></div>
                     
                     <label for="email">Email</label>
                     <input type="text" id="email" name="email" value="<%= locals.oldData ? oldData.email : null %>">
                     <% if (locals.errors && errors.email) { %>
                         <div class="error">* <%= errors.email.msg %></div>
                     <% } %>
+                    <div class="error" id="errorEmail"></div>
 
                     <label for="password">Contraseña</label>
                     <input type="password" id="password" name="password" value="<%= locals.oldData ? oldData.password : null %>">
                     <% if (locals.errors && errors.password) { %>
                         <div class="error">* <%= errors.password.msg %></div>
                     <% } %>
+                    <div class="error" id="errorPassword"></div>
 
                     <label for="repassword">Confirmar contraseña</label>
                     <input type="password" id="repassword" name="repassword" value="<%= locals.oldData ? oldData.repassword : null %>">
                     <% if (locals.errors && errors.repassword) { %>
                         <div class="error">* <%= errors.repassword.msg %></div>
                     <% } %>
+                    <div class="error" id="errorRepassword"></div>
 
 
                     <!----------------- VOLVER A LA PAGINA DE LOGIN ------------------------>
@@ -60,4 +64,5 @@
     <!--Partials footer  -->
     <%- include('../partials/footer.ejs') %>
 </body>
+<script src="/scripts/Validations/register.js"></script>
 </html>
