--- a/public/css/styles-register.css
+++ b/public/css/styles-register.css
@@ -18,7 +18,7 @@
   margin-bottom: 1rem;
   margin-left: 0.5rem;
   font-size: 0.8rem;
-  color: #BF2020;
+  color: #E44242;
   font-style: italic;
   font-weight: bold;
 
@@ -30,7 +30,14 @@
   border-radius: 0.5rem;
   padding: 1.5rem;
   width: 80vw;
+  transition: all 1s ease;
 }
+
+.contenedor-register.dark-mode {
+  background-color: #6A6D6F;
+  color: white;
+}
+
 
 .contenedor-register form {
   display: flex;
@@ -62,6 +69,11 @@
   margin-bottom: 1rem;
   text-decoration: none;
   color: #001F54;
+  transition: all 1s ease;
+}
+
+.contenedor-register a.dark-mode {
+  color: white;
 }
 
 /* TITULO DEL REGISTER */
@@ -71,6 +83,11 @@
   font-size: 2rem;
   font-family: 'Fjalla One', sans-serif;
   color: black !important;
+  transition: all 1s ease;
+}
+
+.titulo-register.dark-mode {
+  color: white !important;
 }
 
 /* BOTON DE REGISTRO */
