--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -19,7 +19,7 @@
         </article>
 
         <!------------------ LOGIN Y REGISTER --------------------->
-        <article class="favorites-icon">
+        <article class="switch-icon">
             <button class="switch" id = "switch">
                 <span>
                     <i class="fa-solid fa-sun"></i>
@@ -27,9 +27,9 @@
                 <span>
                     <i class="fa-solid fa-moon"></i>
                 </span>
-
             </button>
         </article>
+
         <% if ( locals.userLogged ) { %>
             <article class="login-icon-logged">
                 <a href="/user/login"><i class="fa-solid fa-user"></i></a>
