--- a/public/css/styles-header-footer.css
+++ b/public/css/styles-header-footer.css
@@ -8,13 +8,22 @@
 main {
     background-color:  #f5f5f5;
     padding: 0.1px 0;
+    transition: all 1s ease;
+}
+
+main.dark-mode {
+    background-color: #4A4C4F;
 }
 
 /*----------- ESTILOS DEL HEADER -------------------*/
-
 header {
     background-color: white;
     padding-bottom: 0.1rem;
+    transition: background-color 1s ease;
+}
+
+header.dark-mode {
+    background-color: #6A6D6F;
 }
 
 .mensaje-sup {
@@ -95,44 +104,9 @@ header {
         display: none;
     }
 
-    .switch{
-        background-color: rgba(0, 31, 84, 0.5);;
-        border: none;
-        outline: none;
-        border-radius: 100px;
-        position: relative;
-        /* background-color: rgba(0, 31, 84, 0.49); */
-    }
-    span {
-        width: 30px;
-        height: 30px;
-        line-height: 30px;
-        display: inline-block;
-        background: none;
-        color: #f5f5f5;
-    }
-
-    .switch::after {
-        content:"";
-        display: block;
-        width: 30px;
-        height: 30px;
-        position: absolute;
-        background-color: white;
-        top: 0;
-        left: 0;
-        right: unset;
-        border-radius: 100px;
-        transition: .3s ease all;
-        box-shadow: 0px 0px 4px rgba(0, 0, 0, .8);
-    }
-    .switch.active{
-        background: #92DCE5;
-        /* background-color: rgba(146, 220, 229, 0.7) */
-    }
-    .switch.active::after {
-        right: 0;
-        left: unset;
+    /** ICONO DE CAMBIO DE TEMA DE LA PAGINA **/
+    .switch-icon {
+        display: none;
     }
 
     /*-----------  BARRA DE NAVEGACION -------------*/
@@ -162,6 +136,52 @@ header {
 /*----------- MEDIA QUERIES DEL HEADER -------------------*/
 
 @media (min-width: 768px) {
+
+    /** ICONO DE CAMBIO DE TEMA DE LA PAGINA **/
+    .switch-icon {
+        width: 10%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.5rem;
+    }
+
+    .switch{
+        background-color: #001F54;
+        border: none;
+        outline: none;
+        border-radius: 100px;
+        position: relative;
+        transition: background-color 1.5s ease;
+    }
+    span {
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        display: inline-block;
+        background: none;
+        color: #f5f5f5;
+    }
+
+    .switch::after {
+        content:"";
+        display: block;
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        background-color: white;
+        top: 0;
+        left: 0px;
+        border-radius: 100px;
+        transition: var(--after-transition, 1s ease all);
+        box-shadow: 0px 0px 4px rgba(0, 0, 0, .8);
+    }
+    .switch.active{
+        background-color: #52DEE5;
+    }
+    .switch.active::after {
+        left: 33px;
+    }
 
     /*------  ICONOS DEL HEADER ---------*/
     .login-icon, .cart-icon, .favorites-icon, .login-icon-logged {
@@ -218,6 +238,11 @@ header {
         width: 100%;
         padding: 0rem 10%;
         border: solid 1px #CACFD2;
+        transition: all 1s ease;
+    }
+
+    .nav-categorias ul.dark-mode {
+        border: solid 1px #4A4C4F;
     }
 
     .nav-categorias li a {
@@ -234,10 +259,20 @@ header {
         width: 20%;
         height: 2rem;
         border-left: solid 1px #CACFD2;
+        transition: all 1s ease;
+    }
+
+    .nav-categorias li.dark-mode {
+        border-left: solid 1px #4A4C4F;
     }
 
     .nav-categorias li:last-child {
         border-right: solid 1px #CACFD2;
+        transition: all 1s ease;
+    }
+
+    .nav-categorias li.dark-mode:last-child {
+        border-right: solid 1px #4A4C4F;
     }
 
     .nav-categorias a {
@@ -245,6 +280,11 @@ header {
         font-weight: bold;
         color: black;
         font-size: 1rem;
+        transition: all 1s ease;
+    }
+
+    .nav-categorias a.dark-mode {
+        color: white;
     }
 
     /*-----------  EFECTO DE GRADIENT -------------*/
@@ -287,6 +327,11 @@ header {
 footer {
     padding: 1rem;
     background-color: white;
+    transition: all 1s ease;
+}
+
+footer.dark-mode {
+    background-color: #6A6D6F;
 }
 
     /*-----------  LOGO  -------------*/	
@@ -314,6 +359,11 @@ footer {
         color: black;
         font-size: 1rem;
         margin: 0.3rem;
+        transition: all 1s ease;
+    }
+
+    .enlaces a.dark-mode {
+        color: white;
     }
 
     /*-----------  REDES SOCIALES -------------*/
@@ -329,6 +379,12 @@ footer {
     .contactanos {
         font-weight: bold;
         font-size: 1.3rem;
+        color: black;
+        transition: all 1s ease;
+    }
+
+    .contactanos.dark-mode {
+        color: white;
     }
 
     .iconos-redes {
@@ -355,6 +411,15 @@ footer {
     .mensaje-inf {
         font-style: italic;
         text-align: center;
+    }
+
+    .mensaje-inf p {
+        color: black;
+        transition: all 1s ease;
+    }
+
+    .mensaje-inf p.dark-mode {
+        color: white;
     }
 
 /*----------- MEDIA QUERIES DEL FOOTER -------------------*/
