--- a/public/css/styles-productsList.css
+++ b/public/css/styles-productsList.css
@@ -21,6 +21,8 @@
 
 .titulo-contenedor {
     margin: 0.3rem;
+    color: black;
+    transition: all 1s ease;
 }
 
 /* PRODUCTOS */
@@ -76,6 +78,10 @@
             font-size: 1.3rem;
         }
 
+        .titulo-contenedor.dark-mode {
+            color: white;
+        }
+        
         .producto {
             margin: 0.5rem;
             border-radius: 0.5rem;
@@ -96,6 +102,11 @@
     width: 100%;
     overflow: hidden;
     background-color: white;
+    transition: all 1s ease;
+}
+
+.slider-box-marcas.dark-mode {
+    background-color: #6A6D6F;
 }
 
 .slider-box-marcas ul {
