--- a/src/views/main/index.ejs
+++ b/src/views/main/index.ejs
@@ -36,7 +36,7 @@
         <!----------------- AQUI ESTAN LOS PRODUCTOS DESTACADOS DEL USUARIO ------------------------>
         <section class="contenedor-productos-destacados">
             <article class="titulo-contenedor">
-                <h3>Productos Destacados</h3>
+                <h3>Productos Más Vendidos</h3>
             </article>
 
             <!----------------- AQUI ESTAN LOS PRODUCTOS DESTACADOS PARA MOSTRAR EN EL HOME ------------------------>
@@ -70,7 +70,7 @@
         <!----------------- AQUI ESTAN LOS PRODUCTOS EN OFERTA PARA EL USUARIO ------------------------>
         <section class="contenedor-productos-ofertas">
             <article class="titulo-contenedor">
-                <h3>Ofertas Destacadas</h3>
+                <h3>Mejores Ofertas</h3>
             </article>
 
             <!----------------- AQUI ESTAN LOS PRODUCTOS EN OFERTA PARA MOSTRAR EN EL HOME ------------------------>
