--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -41,7 +41,7 @@
         <% } %>
         
         <article class="favorites-icon">
-            <a href="/product/productsList/favorites"><i class="fa-solid fa-heart"></i></a>
+            <a href="/product/favorites"><i class="fa-solid fa-heart"></i></a>
         </article>
         
         <article class="cart-icon">
