--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -36,7 +36,7 @@
                             </div>
     
                             <div class="boton-cantidad">
-                                <button type="button">-</button><input type="text" value="1"><button type="button">+</button>
+                                <button type="button" class="minus">-</button><input type="text" value="1" class="count"><button type="button" class="plus">+</button>
                             </div>
     
                             <div class="precio-producto">
@@ -77,4 +77,5 @@
     <!--Partials footer  -->
     <%- include('../partials/footer.ejs') %>
 </body>
+<script src="/scripts/cartButton.js"></script>
 </html>
