--- a/src/views/user/profile.ejs
+++ b/src/views/user/profile.ejs
@@ -51,7 +51,7 @@
                     <article class="user-edit-information">
                         <form action="/user/profile?_method=PUT" method="POST" enctype="multipart/form-data" id="profileForm">
 
-                            <h1>EDITAR INFORMACION DEL USUARIO</h1>
+                            <h1 class="titleEditProfile">EDITAR INFORMACION DEL USUARIO</h1>
 
                             <div>
                                 <label for="name">Nombre:</label>
